# wrdcld

./: .pylintrc  CHANGELOG.md  README.md  Untitled.ipynb  dancingmen.txt  pyproject.toml  space_filling_experiments.ipynb  test.py  test_script.py  wrdcld.ipynb
.github/workflows/: main.yml  publish.yml
examples/: selfreferential.py  sherlock.py
src/: __init__.py  font.py  main.py  rectangle.py  utils.py
tests/: test_font.py  test_rectangle.py  test_wrdcld.py
wrdcld/: __init__.py  __main__.py  cli.py  font.py  image.py  main.py  rectangle.py  util.py
